@@ -8,7 +8,6 @@
 == Future Versions ==
 
  * Rhino support
- * JScript.NET support
  * table
  * trace
  * assert
