@@ -5,7 +5,6 @@
     <script src="../asp/prototype.js" runat="server"></script>
     <script runat="server">
       Jaxer.response.setClientFramework(null);
-      
       console.time("t");
 
       console.log("Hello world!");
